--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,7 +74,7 @@ h1{
 
 #right_side{
   position: absolute;
-  left: 16%;
+  left: 15%;
   width: 85%;
 }
 
@@ -102,7 +102,7 @@ ul{
 }
 
 .small{
-  margin-bottom: 30px;
+  margin: 15px auto;
   width: 98%;
 }
 
@@ -150,7 +150,7 @@ ul{
 
 .graphic{
   width: 50%;
-  margin-bottom: 30px;
+  margin: 25px auto;
 }
 
 #login{
